# Proyecto1ED

./: README.md
TP1 ED ejecucion/TP1 ED/: Almacen.h  Balanceador.h  Clientes.txt  Cola_Ordenes.h  Fabrica.h  Lista_Articulos.h  Lista_Clientes.h  NombreArchivo.h  Ordenes.h  Tiempo.h  empaquetadora.h  facturacion.h  funcionalidadAlmacen.h  main1.cpp
TP1 ED ejecucion/TP1 ED/Ordenes/: Almacen.txt  Orden_1.txt  pedidos.txt
TP1 ED ejecucion/TP1 ED/output/Articulos/: Articulos.txt
build-proyectoDePrueba-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: build.ninja  cmake_install.cmake
build-proyectoDePrueba-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/Clientes/: Clientes.txt
build-proyectoDePrueba-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/proyectoDePrueba_autogen/: deps
proyectoDePrueba/: Articulos.h  Balanceador.h  CMakeLists.txt  Clientes.h  Cola_Ordenes.h  Fabrica.h  Lista_Articulos.h  Ordenes.h  empaquetadora.h  funcionalidadAlmacen.h  main.cpp  mainwindow.h  mainwindow.ui
proyectoDePrueba/build-proyectoDePrueba-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: CMakeCache.txt.prev
proyectoDePrueba/build-proyectoDePrueba-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/Articulos/: Articulos.txt
proyectoDePrueba/build-proyectoDePrueba-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/proyectoDePrueba_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
proyectoDePrueba/build-proyectoDePrueba-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/proyectoDePrueba_autogen/include/: ui_mainwindow.h
proyectoDePrueba/output/Articulos/: Articulos.txt
